Implemented fake lib with the main functions. Updated swagger.
